accordions and add to cart improvement with js import

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="add">
                 <input id="quantity" class="add-qty" type="text" value="1">
-                <button id="add-to-cart" class="add-cta" type="button">Ajouter au panier</button>
+                <button id="add-to-cart" class="add-cta" type="button" data-diabled-text="Déjà au panier">Ajouter au panier</button>
             </div>
         </section>
         <section class="page-txt page-section">
