--- a/index.html
+++ b/index.html
@@ -98,29 +98,29 @@
         <section class="similar page-section">
             <h2 class="product-subttl">Articles similaires</h2>
             <div id="carousel" class="carousel">
-                <ul class="similar-lst carousel-content">
-                    <li class="similar-itm carousel-itm">
+                <ul class="similar-lst carousel-content js-carousel-content">
+                    <li class="similar-itm js-carousel-itm">
                         <a class="similar-lnk" href="#">
                             <img class="similar-img" src="img/canard-dragon.png" alt="canard dragon">
                             <h3 class="similar-ttl">Canard Dragon</h3>
                             <div class="similar-price">19€95</div>
                         </a>
                     </li>
-                    <li class="similar-itm carousel-itm">
+                    <li class="similar-itm js-carousel-itm">
                         <a class="similar-lnk" href="#">
                             <img class="similar-img" src="img/canard-geek.png" alt="canard geek">
                             <h3 class="similar-ttl">Canard Geek</h3>
                             <div class="similar-price">19€95</div>
                         </a>
                     </li>
-                    <li class="similar-itm carousel-itm">
+                    <li class="similar-itm js-carousel-itm">
                         <a class="similar-lnk" href="#">
                             <img class="similar-img" src="img/canard-licorne.png" alt="canard licorne">
                             <h3 class="similar-ttl">Canard Licorne</h3>
                             <div class="similar-price">19€95</div>
                         </a>
                     </li>
-                    <li class="similar-itm carousel-itm">
+                    <li class="similar-itm js-carousel-itm">
                         <a class="similar-lnk" href="#">
                             <img class="similar-img" src="img/canard-bowie.png" alt="canard David Bowie">
                             <h3 class="similar-ttl">Ziggy StarDuck</h3>
@@ -128,8 +128,8 @@
                         </a>
                     </li>
                 </ul>
-                <button id="carousel-prev" type="button" class="carousel-handler carousel-prev">◀️</button>
-                <button id="carousel-next" type="button" class="carousel-handler carousel-next">▶️</button>
+                <button id="carousel-prev" type="button" class="carousel-handler carousel-prev" data-dir="prev">◀️</button>
+                <button id="carousel-next" type="button" class="carousel-handler carousel-next" data-dir="next">▶️</button>
             </div>
         </section>
     </main>
