accordions saved status with local storage and use link markup

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 problèmes que vous rencontrez avec votre code : refactoring, bugs, algo complexe, … Ce nouveau collègue
                 discret et joyeux vous aidera à trouver les solutions à toutes vos problématiques !</p>
             <div>
-                <h2 class="product-subttl product-acrd-lnk" data-accordion-for="advantages">Avantages</h2>
+                <h2 class="product-subttl">
+                    <a class="product-acrd-lnk" href="#advantages" data-accordion-for="advantages">Avantages</a>
+                </h2>
                 <ul id="advantages" class="product-advantages">
                     <li>Un nouveau compagnon de pair programming</li>
                     <li>Repoussez les limites de votre code</li>
@@ -83,7 +85,9 @@
                 </ul>
             </div>
             <div>
-                <h2 class="product-subttl product-acrd-lnk" data-accordion-for="details">Caractéristiques</h2>
+                <h2 class="product-subttl">
+                    <a class="product-acrd-lnk" href="#details" data-accordion-for="details">Caractéristiques</a>
+                </h2>
                 <dl id="details" class="product-car">
                     <dt>Dimensions</dt>
                     <dd>10 cm x 9 cm x 12 cm</dd>
